--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
         "php": "^8.0.2",
         "backpack/crud": "^5.6",
         "backpack/permissionmanager": "^6.0",
+        "barryvdh/laravel-elfinder": "^0.5.2",
         "cviebrock/eloquent-sluggable": "^9.0",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.7",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
